this fixes an issue with misalignment of orgainsation view panels

--- a/src/js/pages/Organisations/components/Organisations/components/Panels/components/Panel/style/panel.scss
+++ b/src/js/pages/Organisations/components/Organisations/components/Panels/components/Panel/style/panel.scss
@@ -13,7 +13,7 @@
     margin-left: 10px;
 
     /* header, path, indicator and the margins set on the panels section */
-    height: calc(100vh - 120px);
+    height: calc(100vh - 110px);
 
     @supports (display: grid) {
         float: none;
